raffia/tests/recoverable/value/urange.css.error.snap
---
source: raffia/tests/recoverable.rs
---
error: unicode range end value exceeds max allowed code point
  ┌─ urange.css:4:18
  │
4 │   unicode-range: U+??????;
  │                  ^^^^^^^^

error: unicode range end value exceeds max allowed code point
  ┌─ urange.css:5:18
  │
5 │   unicode-range: U+12e112;
  │                  ^^^^^^^^

error: unicode range end value exceeds max allowed code point
  ┌─ urange.css:6:18
  │
6 │   unicode-range: U+1e1ee1;
  │                  ^^^^^^^^

error: unicode range end value exceeds max allowed code point
  ┌─ urange.css:7:18
  │
7 │   unicode-range: U+1e1ee1-FFFFFF;
  │                  ^^^^^^^^^^^^^^^

error: unicode range end value exceeds max allowed code point
  ┌─ urange.css:8:18
  │
8 │   unicode-range: U+1e1ee?;
  │                  ^^^^^^^^


